Provided flexiblity to define own namespace in helmchart
Signed-off-by: Yash Jagdale <yash@databahn.ai>

--- a/contrib/charts/dragonfly/templates/prometheusrule.yaml
+++ b/contrib/charts/dragonfly/templates/prometheusrule.yaml
@@ -3,7 +3,9 @@ apiVersion: monitoring.coreos.com/v1
 kind: PrometheusRule
 metadata:
   name: {{ template "dragonfly.fullname" . }}-metrics
-  namespace: {{ .Release.Namespace }}
+  {{- with .Values.prometheusRule.namespace }}
+  namespace: {{ . }}
+  {{- end }}
   labels:
     {{- include "dragonfly.labels" . | nindent 4 }}
 spec:
