chore: add ubuntu22 devcontainer

--- a/.devcontainer/alpine/devcontainer.json
+++ b/.devcontainer/alpine/devcontainer.json
@@ -11,6 +11,7 @@
       ],
       "settings": {
         "cmake.buildDirectory": "/build",
+        "extensions.ignoreRecommendations": true,
         "cmake.configureArgs": []
       }
     }
