fix(helm): add issuer group to create the certificate without wait for the previous created issuer
Signed-off-by: Fabiano Arruda Ferreira das Graças <fafg@fafg-mbm1.fritz.box>

--- a/contrib/charts/dragonfly/templates/certificate.yaml
+++ b/contrib/charts/dragonfly/templates/certificate.yaml
@@ -21,6 +21,7 @@ spec:
   issuerRef:
     kind: {{ required "tls.issuer.kind is required, if createCerts is enabled" .Values.tls.issuer.kind }}
     name: {{ required "tls.issuer.name is required, if createCerts is enabled" .Values.tls.issuer.name }}
+    group: {{ .Values.tls.issuer.group }}
   secretName: '{{ include "dragonfly.fullname" . }}-server-tls'
   usages:
   - client auth
