fix(helm): fix service monitor namespace rendering
Signed-off-by: fafg <fabiano.arruda@hotmail.com>

--- a/contrib/charts/dragonfly/ci/service-monitor-values.golden.yaml
+++ b/contrib/charts/dragonfly/ci/service-monitor-values.golden.yaml
@@ -120,7 +120,7 @@ apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
   name: test-dragonfly-metrics
-  namespace: dragonfly
+  namespace: default
   labels:
     release: prometheus-stack
     app.kubernetes.io/name: dragonfly
