--- a/contrib/charts/dragonfly/ci/service-monitor-values.yaml
+++ b/contrib/charts/dragonfly/ci/service-monitor-values.yaml
@@ -1,6 +1,6 @@
 serviceMonitor:
   enabled: true
-  namespace: dragonfly
+  namespace: ""
   labels:
     release: prometheus-stack
   annotations: {}
