--- a/contrib/charts/dragonfly/templates/servicemonitor.yaml
+++ b/contrib/charts/dragonfly/templates/servicemonitor.yaml
@@ -3,8 +3,10 @@ apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
   name: {{ template "dragonfly.fullname" . }}-metrics
-  {{- with .Values.serviceMonitor.namespace }}
-  namespace: {{ . }}
+  {{- if .Values.serviceMonitor.namespace }}
+  namespace: {{ .Values.serviceMonitor.namespace }}
+  {{- else }}
+  namespace: {{ .Release.Namespace }}
   {{- end }}
   {{- with .Values.serviceMonitor.annotations }}
   annotations:
