also install cert-manager

--- a/.github/actions/lint-test-chart/action.yml
+++ b/.github/actions/lint-test-chart/action.yml
@@ -51,6 +51,8 @@ runs:
         LATEST=$(curl -s https://api.github.com/repos/prometheus-operator/prometheus-operator/releases/latest | jq -cr .tag_name)
         curl -sL https://github.com/prometheus-operator/prometheus-operator/releases/download/${LATEST}/bundle.yaml | kubectl create -f -
 
+        # cert-manager
+        kubectl apply -f https://github.com/cert-manager/cert-manager/releases/download/v1.14.4/cert-manager.yaml
     - name: Getting cluster ready
       shell: bash
       run: |
