--- a/.ct.yaml
+++ b/.ct.yaml
@@ -6,3 +6,5 @@ chart-dirs:
 helm-extra-args: --debug --timeout 60s
 check-version-increment: false
 validate-maintainers: false
+exclude-charts:
+  - contrib/charts/dragonfly/ci/tls-cert-manager-values.golden.yaml
