--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -41,6 +41,10 @@ jobs:
       - uses: actions/checkout@v3
         with:
           submodules: true
+      - name: install sude
+        run: |
+          apt-get update
+          apt-get install sudo
       - name: Set up Python
         uses: actions/setup-python@v3
         with:
