--- a/src/server/CMakeLists.txt
+++ b/src/server/CMakeLists.txt
@@ -61,6 +61,10 @@ if (PRINT_STACKTRACES_ON_SIGNAL)
   target_compile_definitions(dragonfly_lib PRIVATE PRINT_STACKTRACES_ON_SIGNAL)
 endif()
 
+if (WITH_ASAN OR WITH_USAN)
+  target_compile_definitions(dfly_transaction PRIVATE SANITIZERS)
+endif()
+
 find_library(ZSTD_LIB NAMES libzstd.a libzstdstatic.a zstd NAMES_PER_DIR REQUIRED)
 
 cxx_link(dfly_transaction dfly_core strings_lib TRDP::fast_float)
