--- a/contrib/charts/dragonfly/ci/prometheusrules-values.golden.yaml
+++ b/contrib/charts/dragonfly/ci/prometheusrules-values.golden.yaml
@@ -8,7 +8,7 @@ metadata:
   labels:
     app.kubernetes.io/name: dragonfly
     app.kubernetes.io/instance: test
-    app.kubernetes.io/version: "v1.15.0"
+    app.kubernetes.io/version: "v1.15.1"
     app.kubernetes.io/managed-by: Helm
 ---
 # Source: dragonfly/templates/metrics-service.yaml
@@ -20,7 +20,7 @@ metadata:
   labels:
     app.kubernetes.io/name: dragonfly
     app.kubernetes.io/instance: test
-    app.kubernetes.io/version: "v1.15.0"
+    app.kubernetes.io/version: "v1.15.1"
     app.kubernetes.io/managed-by: Helm
     type: metrics
 spec:
@@ -43,7 +43,7 @@ metadata:
   labels:
     app.kubernetes.io/name: dragonfly
     app.kubernetes.io/instance: test
-    app.kubernetes.io/version: "v1.15.0"
+    app.kubernetes.io/version: "v1.15.1"
     app.kubernetes.io/managed-by: Helm
 spec:
   type: ClusterIP
@@ -65,7 +65,7 @@ metadata:
   labels:
     app.kubernetes.io/name: dragonfly
     app.kubernetes.io/instance: test
-    app.kubernetes.io/version: "v1.15.0"
+    app.kubernetes.io/version: "v1.15.1"
     app.kubernetes.io/managed-by: Helm
 spec:
   replicas: 1
@@ -83,7 +83,7 @@ spec:
       serviceAccountName: test-dragonfly
       containers:
         - name: dragonfly
-          image: "docker.dragonflydb.io/dragonflydb/dragonfly:v1.15.0"
+          image: "docker.dragonflydb.io/dragonflydb/dragonfly:v1.15.1"
           imagePullPolicy: IfNotPresent
           ports:
             - name: dragonfly
@@ -114,3 +114,32 @@ spec:
           resources:
             limits: {}
             requests: {}
+---
+# Source: dragonfly/templates/servicemonitor.yaml
+apiVersion: monitoring.coreos.com/v1
+kind: ServiceMonitor
+metadata:
+  name: test-dragonfly-metrics
+  namespace: default
+  labels:
+    app.kubernetes.io/name: dragonfly
+    app.kubernetes.io/instance: test
+    app.kubernetes.io/version: "v1.15.1"
+    app.kubernetes.io/managed-by: Helm
+spec:
+  endpoints:
+    - interval: 10s
+      scrapeTimeout: 10s
+      honorLabels: true
+      port: metrics
+      path: /metrics
+      scheme: http
+  jobLabel: "test"
+  selector:
+    matchLabels:
+      app.kubernetes.io/name: dragonfly
+      app.kubernetes.io/instance: test
+      type: metrics
+  namespaceSelector:
+    matchNames:
+      - default
