--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -47,26 +47,25 @@ jobs:
           apt-get update
           apt-get install sudo
 
+      - name: install kubectl
+        run: |
+          curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
+          sudo install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl
+
       - name: Set up Python
         uses: actions/setup-python@v3
         with:
           python-version: 3.9
 
-      # - name: Create k8s Kind Cluster
-      #   uses: helm/kind-action@v1.9.0
-      #   with:
-      #     kubectl_version: v1.28.0
+      - name: Create k8s Kind Cluster
+        uses: helm/kind-action@v1.9.0
+        with:
+           kubectl_version: v1.28.0
 
 
-      - name: Run Kubectl Commands
-        run: |
-          whereis kubectl
-          whereis kind
-          
-      
-      # - run: |
-      #      kubectl config get-contexts
-      #      kubectl cluster-info --context kind-chart-testing
+      - run: |
+            kubectl config get-contexts
+            kubectl cluster-info --context kind-chart-testing
       
       - name: Install the CRD and Operator
         run: |
