[FIX] - kubectl permissions

--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -70,7 +70,8 @@ jobs:
       - name: Install the CRD and Operator
         run: |
           # Install the CRD and Operator
-          sudo kubectl --context=kind-chart-testing apply -f https://raw.githubusercontent.com/dragonflydb/dragonfly-operator/main/manifests/dragonfly-operator.yaml
+          kubectl config use-context kind-chart-testing
+          kubectl apply -f https://raw.githubusercontent.com/dragonflydb/dragonfly-operator/main/manifests/dragonfly-operator.yaml
       - name: Apply Configuration
         run: |
           echo '${{ toJson(matrix.config) }}' | kubectl apply -f -
