--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -52,16 +52,28 @@ jobs:
           curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
           sudo install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl
 
+      - name: install kind
+        run: |
+          # For AMD64 / x86_64
+          [ $(uname -m) = x86_64 ] && curl -Lo ./kind https://kind.sigs.k8s.io/dl/v0.22.0/kind-linux-amd64
+          # For ARM64
+          [ $(uname -m) = aarch64 ] && curl -Lo ./kind https://kind.sigs.k8s.io/dl/v0.22.0/kind-linux-arm64
+          chmod +x ./kind
+          sudo mv ./kind /usr/local/bin/kind
+
       - name: Set up Python
         uses: actions/setup-python@v3
         with:
           python-version: 3.9
 
-      - name: Create k8s Kind Cluster
-        uses: helm/kind-action@v1.9.0
-        with:
-           kubectl_version: v1.28.0
+#      - name: Create k8s Kind Cluster
+#        uses: helm/kind-action@v1.9.0
+#        with:
+#           kubectl_version: v1.28.0
 
+      - name: Create k8s Kind Cluster
+        run: |
+          kind create cluster --name kind-chart-testing
 
       - run: |
             kubectl config get-contexts
