--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -82,8 +82,7 @@ jobs:
       - name: Install the CRD and Operator
         run: |
           # Install the CRD and Operator
-          kubectl config use-context kind-chart-testing
-          kubectl apply -f https://raw.githubusercontent.com/dragonflydb/dragonfly-operator/main/manifests/dragonfly-operator.yaml
+          kubectl apply -f https://raw.githubusercontent.com/dragonflydb/dragonfly-operator/main/manifests/dragonfly-operator.yaml --validate=false
       - name: Apply Configuration
         run: |
           echo '${{ toJson(matrix.config) }}' | kubectl apply -f -
