fix replication: fix replicaiton with multi shard sync enabled
Signed-off-by: adi_holden <adi@dragonflydb.io>

--- a/.github/actions/regression-tests/action.yml
+++ b/.github/actions/regression-tests/action.yml
@@ -77,8 +77,7 @@ runs:
           fi
         }
 
-        # disabled due to failures with this mode.
-        # (run_pytest_with_args --df enable_multi_shard_sync=true)
+        (run_pytest_with_args --df enable_multi_shard_sync=true)
         (run_pytest_with_args --df enable_multi_shard_sync=false)
 
     - name: Print last log on timeout
