[FIX] - kubectl permissions

--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -58,6 +58,8 @@ jobs:
         uses: helm/kind-action@v1.9.0
         with:
           kubectl_version: v1.28.0
+          verbosity: 10
+          cluster_name: action
 
       - name: DEBUG
         run: |
