[FIX] - kubectl permissions

--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -64,8 +64,7 @@ jobs:
       - name: DEBUG
         run: |
           sleep 20
-          kubectl version
-          kubectl wait --for=condition=ready node --all --timeout=300s
+          cat $HOME/.kube/config
           kubectl config get-contexts
           kubectl cluster-info --context kind-chart-testing
 
