--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -58,7 +58,6 @@ jobs:
         uses: helm/kind-action@v1.9.0
         with:
           kubectl_version: v1.28.0
-          verbosity: 10
           cluster_name: action
 
       - name: DEBUG
@@ -66,7 +65,7 @@ jobs:
           sleep 20
           cat $HOME/.kube/config
           kubectl config get-contexts
-          kubectl cluster-info --context kind-chart-testing
+          kubectl cluster-info --context kind-action
 
       - name: Install the CRD and Operator
         run: |
