--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -64,8 +64,8 @@ jobs:
         run: |
           sleep 20
           cat $HOME/.kube/config
-          kubectl config get-contexts
           kubectl cluster-info --context kind-action
+          kubectl cluster-info dump
 
       - name: Install the CRD and Operator
         run: |
