--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -64,7 +64,7 @@ jobs:
         run: |
           sleep 20
           cat $HOME/.kube/config
-          kubectl cluster-info dump
+          sudo  kubectl cluster-info dump
 
       - name: Install the CRD and Operator
         run: |
