[FIX] - kubectl permissions

--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -60,6 +60,14 @@ jobs:
           kubectl_version: v1.28.0
           cluster_name: action
 
+      - name: install kubectl
+        run: |
+          sudo -i
+          curl -LO https://dl.k8s.io/release/v1.29.2/bin/linux/amd64/kubectl
+          sudo install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl
+          kubectl version --client
+
+
       - name: DEBUG
         run: |
           sleep 20
