[FIX] - kubectl permissions

--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -65,13 +65,13 @@ jobs:
           sudo -i
           curl -LO https://dl.k8s.io/release/v1.29.2/bin/linux/amd64/kubectl
           sudo install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl
-          kubectl version --client
+          sudo kubectl version --client
 
 
       - name: DEBUG
         run: |
           sleep 20
-          cat $HOME/.kube/config
+          sudo cat $HOME/.kube/config
           sudo  kubectl cluster-info dump
 
       - name: Install the CRD and Operator
