[FIX] - kubectl permissions

--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -70,8 +70,7 @@ jobs:
           sudo -i
           curl -LO https://dl.k8s.io/release/v1.29.2/bin/linux/amd64/kubectl
           sudo install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl
-          sudo kubectl version --client
-
+          docker logs
 
       - name: DEBUG
         run: |
