--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -70,7 +70,9 @@ jobs:
           sudo -i
           curl -LO https://dl.k8s.io/release/v1.29.2/bin/linux/amd64/kubectl
           sudo install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl
-          docker logs
+          docker ps -a
+          docker logs --tail=0 --follow
+
 
       - name: DEBUG
         run: |
