--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -53,6 +53,8 @@ jobs:
           sudo -i 
           echo " " > $HOME/.kube/config
           cat  $HOME/.kube/config
+          docker stop $(docker ps -a -q) 
+          docker system prune -a
 
 
       - name: Set up Python
@@ -71,7 +73,7 @@ jobs:
           curl -LO https://dl.k8s.io/release/v1.29.2/bin/linux/amd64/kubectl
           sudo install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl
           docker ps -a
-          docker logs --tail=0 --follow
+          docker logs action-control-plane --tail=0 --follow
 
 
       - name: DEBUG
