--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -71,7 +71,7 @@ jobs:
           curl -LO https://dl.k8s.io/release/v1.29.2/bin/linux/amd64/kubectl
           sudo install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl
           docker ps -a
-          docker logs action-control-plane --tail=0 --follow
+          docker logs action-control-plane --tail=100
 
       - name: DEBUG
         run: |
